[package]
name = "nebz"
version = "0.1.0"
edition = "2024"
description = "an immutable non-empty bytes container"
readme = "README.md"
repository = "https://github.com/hubcycle/nebz"
license = "MIT OR Apache-2.0"
publish = true

[features]
default = []
bytes = ["dep:bytes"]

[dependencies]
bytes = { version = "1", optional = true }
