[package]
name = "nebz"
version = "0.2.0-pre"
edition = "2024"
description = "an immutable non-empty bytes container"
readme = "README.md"
repository = "https://github.com/hubcycle/nebz"
license = "MIT OR Apache-2.0"
publish = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
bytes = ["dep:bytes"]

[dependencies]
bytes = { version = "1", optional = true }

[dev-dependencies]
rstest = { version = "0.25", default-features = false }
